# Torsten

./: .gitignore  .mcp.json  CARDANO-LSM-ISSUE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.claude/agent-memory/cardano-blueprint-expert/: MEMORY.md  blueprint-consensus.md  blueprint-gaps.md  blueprint-governance.md  blueprint-ledger.md  blueprint-network.md  blueprint-overview.md  blueprint-plutus.md  blueprint-serialization.md  blueprint-storage.md  blueprint-test-vectors.md
.claude/agents/: cardano-blueprint-expert.md  pallas-advisor.md
.github/workflows/: ci.yml  release.yml
benches/results/: 2026-03-14-large-scale.md  2026-03-14-live-replay.md
charts/torsten-node/: Chart.yaml
config/: grafana-dashboard.json  preprod-topology.json  preview-config.json  preview-topology.json  prometheus.yml
crates/torsten-cli/: Cargo.toml
crates/torsten-consensus/: Cargo.toml
crates/torsten-crypto/: Cargo.toml
crates/torsten-crypto/benches/: crypto_bench.rs
crates/torsten-crypto/src/: kes.rs  vrf.rs
crates/torsten-integration-tests/: Cargo.toml
crates/torsten-ledger/: Cargo.toml
crates/torsten-network/: Cargo.toml
crates/torsten-node/: Cargo.toml
crates/torsten-primitives/: Cargo.toml
crates/torsten-storage/: Cargo.toml
deploy/: torsten-node.service
docs/src/: SUMMARY.md  installation.md  quickstart.md
fuzz/: Cargo.toml
fuzz/corpus/decode_block/: alonzo  babbage  conway
fuzz/fuzz_targets/: decode_block.rs  decode_transaction.rs
scripts/: run-bp-preview.sh  start-monitoring.sh
tests/conformance/: README.md
tests/e2e/: run.sh
(+166 files in other folders)
